Chnges separating plotting from netwrok analysis

--- a/AxonReconPipeline/src/execute_pipeline.ipynb
+++ b/AxonReconPipeline/src/execute_pipeline.ipynb
@@ -6,35 +6,16 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'detect_threshold': 0.01,\n",
-      " 'detection_type': 'relative',\n",
-      " 'distance_exp': 2,\n",
-      " 'edge_dist_amp_ratio': 0.3,\n",
-      " 'init_amp_peak_ratio': 0.2,\n",
-      " 'init_delay': 0,\n",
-      " 'kurt_threshold': 0.1,\n",
-      " 'mad_threshold': 8,\n",
-      " 'max_distance_for_edge': 300,\n",
-      " 'max_distance_to_init': 200,\n",
-      " 'max_peak_latency_for_splitting': 0.5,\n",
-      " 'min_outlier_tracking_error': 50,\n",
-      " 'min_path_length': 100,\n",
-      " 'min_path_points': 5,\n",
-      " 'min_points_after_branching': 3,\n",
-      " 'min_selected_points': 30,\n",
-      " 'n_neighbors': 3,\n",
-      " 'neighbor_radius': 100,\n",
-      " 'peak_std_distance': 30,\n",
-      " 'peak_std_threshold': 0.8,\n",
-      " 'r2_threshold': 0.8,\n",
-      " 'r2_threshold_for_outliers': 0.98,\n",
-      " 'remove_isolated': True,\n",
-      " 'split_paths': True,\n",
-      " 'theilsen_maxiter': 10000,\n",
-      " 'upsample': 5}\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mea_processing_library'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 16\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfile_selector\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m main \u001b[38;5;28;01mas\u001b[39;00m file_selector_main\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m#from AxonReconPipeline.src.archive.extract_raw_assay_data import main as extract_raw_assay_data_main\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgenerate_recording_and_sorting_objects\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m main \u001b[38;5;28;01mas\u001b[39;00m generate_recording_and_sorting_objects\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01maxon_trace_classes\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m axon_trace_objects\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mreconstruct_axons\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m reconstruct_axon_trace_objects\n",
+      "File \u001b[0;32m/mnt/disk15tb/mmpatil/MEA_Analysis/AxonReconPipeline/src/generate_recording_and_sorting_objects.py:14\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m#local imports\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m#import mea_processing_library as MPL\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mhelper_functions\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mhelper\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mspike_sorting\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mhp\u001b[39;00m \u001b[38;5;66;03m#hornauerp, https://github.com/hornauerp/axon_tracking/blob/main/axon_tracking/spike_sorting.py\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m#Logger Setup\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m#Create a logger\u001b[39;00m\n\u001b[1;32m     18\u001b[0m logger \u001b[38;5;241m=\u001b[39m logging\u001b[38;5;241m.\u001b[39mgetLogger(\u001b[38;5;18m__name__\u001b[39m)\n",
+      "File \u001b[0;32m/mnt/disk15tb/mmpatil/MEA_Analysis/AxonReconPipeline/src/spike_sorting.py:18\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mshutil\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# import spikeinterface\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# from spikeinterface.widgets import plot_electrode_geometry\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m#local:\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmea_processing_library\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mMPL\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m#spikeinterface:\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mspikeinterface\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msorters\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mss\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'mea_processing_library'"
      ]
     }
    ],
@@ -57,7 +38,7 @@
     "from generate_recording_and_sorting_objects import main as generate_recording_and_sorting_objects\n",
     "from axon_trace_classes import axon_trace_objects\n",
     "from reconstruct_axons import reconstruct_axon_trace_objects\n",
-    "import mea_processing_library as MPL\n",
+    "#import mea_processing_library as MPL\n",
     "import helper_functions as helper\n",
     "import spike_sorting as hp #hornauerp, https://github.com/hornauerp/axon_tracking/blob/main/axon_tracking/spike_sorting.py\n",
     "import template_extraction as te_hp\n",
@@ -7327,7 +7308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
