--- a/NetworkAnalysis/PlottingFunctions/plot_networkfiles.ipynb
+++ b/NetworkAnalysis/PlottingFunctions/plot_networkfiles.ipynb
@@ -136,10 +136,279 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Run_ID', 'DIV', 'Well', 'NeuronType', 'Time', 'Chip_ID', 'mean_IBI',\n",
+       "       'cov_IBI', 'mean_Burst_Peak', 'cov_Burst_Peak',\n",
+       "       'mean_Burst_Peak_Normalized', 'cov_Burst_Peak_Normalized',\n",
+       "       'mean_Burst_Peak_Abs', 'cov_Burst_Peak_Abs', 'Number_Bursts',\n",
+       "       'mean_Spike_per_Burst', 'cov_Spike_per_Burst', 'mean_BurstDuration',\n",
+       "       'cov_BurstDuration', 'MeanNetworkISI', 'CoVNetworkISI',\n",
+       "       'MeanWithinBurstISI', 'CoVWithinBurstISI', 'MeanOutsideBurstISI',\n",
+       "       'CoVOutsideBurstISI', 'Fanofactor'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load data\n",
+    "data = pd.read_csv('/mnt/disk15tb/paula/Main_DA_Projects/data_analysis_output/Primary Neurons/KCNT1_T4_MAY28/Network_outputs/Compiled_Networks.csv')  # Ensure to change the path as needed\n",
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://127.0.0.1:50721\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:50721/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x78619cc2cc70>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------------------------------------------------\n",
+      "AttributeError                            Traceback (most recent call last)\n",
+      "Cell In[15], line 134, in update_graph(\n",
+      "    selected_divs=[7, 11, 14, 18, 21, 25, 28, 32],\n",
+      "    selected_neuron_types=['HOM', 'HET'],\n",
+      "    plot_type='bar',\n",
+      "    selected_metric='mean_IBI',\n",
+      "    stat_type=None\n",
+      ")\n",
+      "    125     for neuron_type in selected_neuron_types:\n",
+      "    126         fig.add_trace(go.Scatter(\n",
+      "    127             x=selected_divs,\n",
+      "    128             y=means.get(neuron_type, pd.Series(index=selected_divs, data=np.nan)).values,\n",
+      "    129             name=neuron_type,\n",
+      "    130             mode='lines+markers'\n",
+      "    131         ))\n",
+      "    133 fig.update_layout(\n",
+      "--> 134     title=f'{selected_metric} by DIV using {stat_type.upper()}',\n",
+      "        fig = Figure({\n",
+      "    'data': [{'error_y': {'array': array([2.32590586, 0.65615973, 4.3112155 , 0.65266542, 0.62788313, 0.64345391,\n",
+      "                                          0.45460613, 0.82527899]),\n",
+      "                          'type': 'data',\n",
+      "                          'visible': True},\n",
+      "              'name': 'HOM',\n",
+      "              'offsetgroup': '0',\n",
+      "              'type': 'bar',\n",
+      "              'x': [7, 11, 14, 18, 21, 25, 28, 32],\n",
+      "              'y': array([2.32590586, 0.65615973, 4.3112155 , 0.65266542, 0.62788313, 0.64345391,\n",
+      "                          0.45460613, 0.82527899])},\n",
+      "             {'error_y': {'array': array([1.48185426, 0.82065669, 0.49857211, 1.2468102 , 0.61021802, 0.9825857 ,\n",
+      "                                          1.1466698 , 1.19213139]),\n",
+      "                          'type': 'data',\n",
+      "                          'visible': True},\n",
+      "              'name': 'HET',\n",
+      "              'offsetgroup': '1',\n",
+      "              'type': 'bar',\n",
+      "              'x': [7, 11, 14, 18, 21, 25, 28, 32],\n",
+      "              'y': array([1.48185426, 0.82065669, 0.49857211, 1.2468102 , 0.61021802, 0.9825857 ,\n",
+      "                          1.1466698 , 1.19213139])}],\n",
+      "    'layout': {'barmode': 'group', 'template': '...'}\n",
+      "})\n",
+      "        stat_type = None\n",
+      "        selected_metric = 'mean_IBI'\n",
+      "    135     xaxis_title='DIV',\n",
+      "    136     yaxis_title=f'{stat_type.upper()} of {selected_metric}',\n",
+      "    137     xaxis={'type': 'category'}\n",
+      "    138 )\n",
+      "    139 return fig\n",
+      "\n",
+      "AttributeError: 'NoneType' object has no attribute 'upper'\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import dash\n",
+    "from dash import dcc, html\n",
+    "from dash.dependencies import Input, Output\n",
+    "import plotly.graph_objects as go\n",
+    "import socket\n",
+    "\n",
+    "\n",
+    "# Extract unique DIVs from the dataset\n",
+    "unique_divs = sorted(data['DIV'].unique())\n",
+    "\n",
+    "# Define available metrics\n",
+    "metrics = ['mean_IBI', 'mean_Burst_Peak', 'Number_Bursts', 'mean_Spike_per_Burst', 'mean_BurstDuration']\n",
+    "\n",
+    "# Extract unique neuron types from the dataset\n",
+    "types = data['NeuronType'].unique()\n",
+    "\n",
+    "# Initialize the Dash app\n",
+    "app = dash.Dash(__name__)\n",
+    "\n",
+    "# App layout\n",
+    "app.layout = html.Div([\n",
+    "    dcc.Checklist(\n",
+    "        id='div-checklist',\n",
+    "        options=[{'label': str(div), 'value': div} for div in unique_divs],\n",
+    "        value=unique_divs,  # Default all DIVs selected\n",
+    "        inline=True\n",
+    "    ),\n",
+    "    dcc.Checklist(\n",
+    "        id='neurontype-checklist',\n",
+    "        options=[{'label': neuron_type, 'value': neuron_type} for neuron_type in types],\n",
+    "        value=types,  # Default all neuron types selected\n",
+    "        inline=True\n",
+    "    ),\n",
+    "    dcc.Dropdown(\n",
+    "        id='plot-type-dropdown',\n",
+    "        options=[\n",
+    "            {'label': 'Bar Graph', 'value': 'bar'},\n",
+    "            {'label': 'Histogram', 'value': 'hist'},\n",
+    "            {'label': 'Line Plot', 'value': 'line'}\n",
+    "        ],\n",
+    "        value='bar'\n",
+    "    ),\n",
+    "    dcc.Dropdown(\n",
+    "        id='metric-dropdown',\n",
+    "        options=[{'label': metric, 'value': metric} for metric in metrics],\n",
+    "        value=metrics[0]\n",
+    "    ),\n",
+    "    dcc.Dropdown(\n",
+    "        id='statistic-type-dropdown',\n",
+    "        options=[\n",
+    "            {'label': 'Mean', 'value': 'mean'},\n",
+    "            {'label': 'Standard Error of the Mean', 'value': 'sem'}\n",
+    "        ],\n",
+    "        value='mean'\n",
+    "    ),\n",
+    "    dcc.Graph(\n",
+    "        id='data-graph',\n",
+    "        config={\n",
+    "            'toImageButtonOptions': {\n",
+    "                'format': 'svg',\n",
+    "                'filename': 'custom_image',\n",
+    "                'height': 600,\n",
+    "                'width': 1200,\n",
+    "                'scale': 1\n",
+    "            },\n",
+    "            'displaylogo': False,\n",
+    "            'modeBarButtonsToAdd': ['toImage']\n",
+    "        }\n",
+    "    )\n",
+    "])\n",
+    "\n",
+    "# Callbacks to update the graph\n",
+    "@app.callback(\n",
+    "    Output('data-graph', 'figure'),\n",
+    "    [Input('div-checklist', 'value'),\n",
+    "     Input('neurontype-checklist', 'value'),\n",
+    "     Input('plot-type-dropdown', 'value'),\n",
+    "     Input('metric-dropdown', 'value'),\n",
+    "     Input('statistic-type-dropdown', 'value')])\n",
+    "def update_graph(selected_divs, selected_neuron_types, plot_type, selected_metric, stat_type):\n",
+    "    # Filter data based on selected DIVs and neuron types\n",
+    "    filtered_data = data[data['DIV'].isin(selected_divs) & data['NeuronType'].isin(selected_neuron_types)]\n",
+    "\n",
+    "    fig = go.Figure()\n",
+    "\n",
+    "    if plot_type == 'bar':\n",
+    "        # Calculate mean or SEM based on selection\n",
+    "        if stat_type == 'mean':\n",
+    "            summary_stats = filtered_data.groupby(['DIV', 'NeuronType'])[selected_metric].mean().unstack()\n",
+    "            errors = filtered_data.groupby(['DIV', 'NeuronType'])[selected_metric].sem().unstack()\n",
+    "        else:\n",
+    "            summary_stats = filtered_data.groupby(['DIV', 'NeuronType'])[selected_metric].sem().unstack()\n",
+    "            errors = filtered_data.groupby(['DIV', 'NeuronType'])[selected_metric].sem().unstack()\n",
+    "        \n",
+    "        for idx, neuron_type in enumerate(selected_neuron_types):\n",
+    "            fig.add_trace(go.Bar(\n",
+    "                x=selected_divs,\n",
+    "                y=summary_stats.get(neuron_type, pd.Series(index=selected_divs, data=np.nan)).values,\n",
+    "                name=neuron_type,\n",
+    "                offsetgroup=idx,\n",
+    "                error_y=dict(type='data', array=errors.get(neuron_type, pd.Series(index=selected_divs, data=np.nan)).values if errors is not None else None, visible=True)\n",
+    "            ))\n",
+    "        fig.update_layout(barmode='group')\n",
+    "    \n",
+    "    elif plot_type == 'hist':\n",
+    "        # Calculating bin size and edges for histograms\n",
+    "        global_min = filtered_data[selected_metric].min()\n",
+    "        global_max = filtered_data[selected_metric].max()\n",
+    "        bins = np.linspace(global_min, global_max, 21)  # 20 bins\n",
+    "        for neuron_type in selected_neuron_types:\n",
+    "            for div in selected_divs:\n",
+    "                div_data = filtered_data[(filtered_data['DIV'] == div) & (filtered_data['NeuronType'] == neuron_type)][selected_metric]\n",
+    "                fig.add_trace(go.Histogram(\n",
+    "                    x=div_data,\n",
+    "                    name=f'{neuron_type} DIV {div}',\n",
+    "                    xbins=dict(start=bins[0], end=bins[-1], size=(bins[1]-bins[0])),\n",
+    "                    opacity=0.75\n",
+    "                ))\n",
+    "        fig.update_layout(barmode='overlay')\n",
+    "    \n",
+    "    elif plot_type == 'line':\n",
+    "        means = filtered_data.groupby(['DIV', 'NeuronType'])[selected_metric].mean().unstack()\n",
+    "        for neuron_type in selected_neuron_types:\n",
+    "            fig.add_trace(go.Scatter(\n",
+    "                x=selected_divs,\n",
+    "                y=means.get(neuron_type, pd.Series(index=selected_divs, data=np.nan)).values,\n",
+    "                name=neuron_type,\n",
+    "                mode='lines+markers'\n",
+    "            ))\n",
+    "    \n",
+    "    fig.update_layout(\n",
+    "        title=f'{selected_metric} by DIV using {stat_type.upper()}',\n",
+    "        xaxis_title='DIV',\n",
+    "        yaxis_title=f'{stat_type.upper()} of {selected_metric}',\n",
+    "        xaxis={'type': 'category'}\n",
+    "    )\n",
+    "    return fig\n",
+    "\n",
+    "def find_free_port():\n",
+    "    s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "    s.bind(('', 0))\n",
+    "    port = s.getsockname()[1]\n",
+    "    print(f'http://127.0.0.1:{port}')\n",
+    "    s.close()\n",
+    "    return port\n",
+    "\n",
+    "# Run the app on an available port\n",
+    "if __name__ == '__main__':\n",
+    "    free_port = find_free_port()\n",
+    "    app.run_server(debug=True, port=free_port)"
+   ]
   },
   {
    "cell_type": "code",
