Latest changes: Extended metrics, sorted raster, detect peaks on raw etc.

--- a/IPNAnalysis/BrianSliceanalysis.ipynb
+++ b/IPNAnalysis/BrianSliceanalysis.ipynb
@@ -22,6 +22,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''some change is done'''"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
