new criteria added

--- a/NetworkAnalysis/PlottingFunctions/Multivariate_network_analysis.ipynb
+++ b/NetworkAnalysis/PlottingFunctions/Multivariate_network_analysis.ipynb
@@ -1043,6 +1043,111 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "# Load and preprocess data\n",
+    "file_csv = '/Users/liufanling/Library/CloudStorage/OneDrive-个人/1 UC DAVIS/2024 Summer/CSRA/Outputs/SYNGAP_ALL/Network/Compiled_Networks.csv'\n",
+    "data = pd.read_csv(file_csv)\n",
+    "data = data.replace(np.NaN, 0.0)\n",
+    "\n",
+    "# Features and target\n",
+    "X = data[['mean_Burst_Peak', 'Number_Bursts', 'mean_BurstDuration']]\n",
+    "y = data['NeuronType']\n",
+    "\n",
+    "# Standardizing the features\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Splitting the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Initialize and train the LDA model\n",
+    "lda = LDA()\n",
+    "X_train_lda = lda.fit_transform(X_train, y_train)\n",
+    "X_test_lda = lda.transform(X_test)\n",
+    "\n",
+    "# Predicting and evaluating the model\n",
+    "y_pred = lda.predict(X_test)\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "print(confusion_matrix(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Load the dataset (Assuming 'df' has been loaded somewhere above this code)\n",
+    "# df = pd.read_csv('your_dataset.csv')  # Uncomment and adjust if needed\n",
+    "\n",
+    "# Assuming 'features' should be the columns you want to include in the LDA\n",
+    "features = ['mean_Burst_Peak', 'Number_Bursts', 'mean_BurstDuration']\n",
+    "X = df[features]  # Ensure only desired, numeric features are included\n",
+    "\n",
+    "# Ensure target variable 'NeuronType' is properly encoded\n",
+    "le = LabelEncoder()\n",
+    "y = le.fit_transform(df['NeuronType'])\n",
+    "\n",
+    "# Apply LDA\n",
+    "lda = LDA()\n",
+    "X_lda = lda.fit_transform(X, y)\n",
+    "\n",
+    "# Create a DataFrame for LDA results\n",
+    "if X_lda.shape[1] > 1:\n",
+    "    lda_df = pd.DataFrame(X_lda, columns=['LD1', 'LD2'])\n",
+    "else:\n",
+    "    lda_df = pd.DataFrame(X_lda, columns=['LD1'])\n",
+    "lda_df['NeuronType'] = le.inverse_transform(y)  # Convert labels back to original for plotting\n",
+    "\n",
+    "# Plot the LDA results\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "if 'LD2' in lda_df.columns:\n",
+    "    sns.scatterplot(x='LD1', y='LD2', hue='NeuronType', data=lda_df, palette='Set1')\n",
+    "    plt.xlabel('Linear Discriminant 1')\n",
+    "    plt.ylabel('Linear Discriminant 2')\n",
+    "else:\n",
+    "    sns.scatterplot(x='LD1', y=np.zeros(len(lda_df)), hue='NeuronType', data=lda_df, palette='Set1')\n",
+    "    plt.xlabel('Linear Discriminant 1')\n",
+    "    plt.ylabel('Constant Zero Line for Visualization')\n",
+    "plt.legend(loc='best')\n",
+    "plt.title('LDA of Neuron Types for Selected Run_IDs')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lda_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**K-means**"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
