this folder is for activity quality check and outlier filtering

--- a/NetworkAnalysis/PlottingFunctions/Multivariate_network_analysis.ipynb
+++ b/NetworkAnalysis/PlottingFunctions/Multivariate_network_analysis.ipynb
@@ -1491,11 +1491,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Random Forest**"
+   ]
   },
   {
    "cell_type": "markdown",
