--- a/NetworkAnalysis/ActivityQuality/StandardRef.ipynb
+++ b/NetworkAnalysis/ActivityQuality/StandardRef.ipynb
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -348,145 +348,70 @@
      "text": [
       "Data processing complete. Files have been saved in their respective directories.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/hz/mtvvz9t52kxgqcx423vlrhx00000gn/T/ipykernel_70775/2383765224.py:22: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  general_info_df.loc[:, 'Mapping_Key'] = general_info_df.apply(lambda x: f'P{x[\"Plate #\"]}W{x[\"Well #\"]}', axis=1)\n",
-      "/var/folders/hz/mtvvz9t52kxgqcx423vlrhx00000gn/T/ipykernel_70775/2383765224.py:22: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  general_info_df.loc[:, 'Mapping_Key'] = general_info_df.apply(lambda x: f'P{x[\"Plate #\"]}W{x[\"Well #\"]}', axis=1)\n",
-      "/var/folders/hz/mtvvz9t52kxgqcx423vlrhx00000gn/T/ipykernel_70775/2383765224.py:22: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  general_info_df.loc[:, 'Mapping_Key'] = general_info_df.apply(lambda x: f'P{x[\"Plate #\"]}W{x[\"Well #\"]}', axis=1)\n",
-      "/var/folders/hz/mtvvz9t52kxgqcx423vlrhx00000gn/T/ipykernel_70775/2383765224.py:22: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  general_info_df.loc[:, 'Mapping_Key'] = general_info_df.apply(lambda x: f'P{x[\"Plate #\"]}W{x[\"Well #\"]}', axis=1)\n",
-      "/var/folders/hz/mtvvz9t52kxgqcx423vlrhx00000gn/T/ipykernel_70775/2383765224.py:22: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  general_info_df.loc[:, 'Mapping_Key'] = general_info_df.apply(lambda x: f'P{x[\"Plate #\"]}W{x[\"Well #\"]}', axis=1)\n",
-      "/var/folders/hz/mtvvz9t52kxgqcx423vlrhx00000gn/T/ipykernel_70775/2383765224.py:22: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  general_info_df.loc[:, 'Mapping_Key'] = general_info_df.apply(lambda x: f'P{x[\"Plate #\"]}W{x[\"Well #\"]}', axis=1)\n",
-      "/var/folders/hz/mtvvz9t52kxgqcx423vlrhx00000gn/T/ipykernel_70775/2383765224.py:22: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  general_info_df.loc[:, 'Mapping_Key'] = general_info_df.apply(lambda x: f'P{x[\"Plate #\"]}W{x[\"Well #\"]}', axis=1)\n",
-      "/var/folders/hz/mtvvz9t52kxgqcx423vlrhx00000gn/T/ipykernel_70775/2383765224.py:22: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  general_info_df.loc[:, 'Mapping_Key'] = general_info_df.apply(lambda x: f'P{x[\"Plate #\"]}W{x[\"Well #\"]}', axis=1)\n",
-      "/var/folders/hz/mtvvz9t52kxgqcx423vlrhx00000gn/T/ipykernel_70775/2383765224.py:22: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  general_info_df.loc[:, 'Mapping_Key'] = general_info_df.apply(lambda x: f'P{x[\"Plate #\"]}W{x[\"Well #\"]}', axis=1)\n",
-      "/var/folders/hz/mtvvz9t52kxgqcx423vlrhx00000gn/T/ipykernel_70775/2383765224.py:22: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  general_info_df.loc[:, 'Mapping_Key'] = general_info_df.apply(lambda x: f'P{x[\"Plate #\"]}W{x[\"Well #\"]}', axis=1)\n",
-      "/var/folders/hz/mtvvz9t52kxgqcx423vlrhx00000gn/T/ipykernel_70775/2383765224.py:22: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  general_info_df.loc[:, 'Mapping_Key'] = general_info_df.apply(lambda x: f'P{x[\"Plate #\"]}W{x[\"Well #\"]}', axis=1)\n",
-      "/var/folders/hz/mtvvz9t52kxgqcx423vlrhx00000gn/T/ipykernel_70775/2383765224.py:22: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  general_info_df.loc[:, 'Mapping_Key'] = general_info_df.apply(lambda x: f'P{x[\"Plate #\"]}W{x[\"Well #\"]}', axis=1)\n"
-     ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import os\n",
+    "# # spike only and full trace analysis\n",
+    "# import pandas as pd\n",
+    "# import os\n",
+    "# import re  # Import the regular expression library\n",
     "\n",
-    "# Define the base path for saving the results\n",
-    "base_path = '/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/QualityCheck'\n",
+    "# # Define the base path for saving the results\n",
+    "# base_path = '/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/SpikeOnly_FullTrace_check'\n",
     "\n",
-    "# Load the Excel file\n",
-    "excel_path = '/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/QualityCheck/simple_check_1.xlsx'\n",
-    "sheets = pd.read_excel(excel_path, sheet_name=None)  # Load all sheets into a dictionary\n",
+    "# # Load the Excel file\n",
+    "# excel_path = '/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/SpikeOnly_FullTrace_check/HET.xlsx'\n",
+    "# sheets = pd.read_excel(excel_path, sheet_name=None)  # Load all sheets into a dictionary\n",
     "\n",
-    "# Process each sheet\n",
-    "for sheet_name, simple_check_df in sheets.items():\n",
-    "    # Identify the index where the second part starts by locating the header \"P1W1\"\n",
-    "    active_area_start_idx = simple_check_df[simple_check_df.eq(\"P1W1\").any(axis=1)].index.min()\n",
+    "# # Process each sheet\n",
+    "# for sheet_name, simple_check_df in sheets.items():\n",
+    "#     # Identify the index where the second part starts by locating the header \"P1W1\"\n",
+    "#     active_area_start_idx = simple_check_df[simple_check_df.eq(\"P1W4\").any(axis=1)].index.min()\n",
     "\n",
-    "    # Extract the general information data and the active area data separately\n",
-    "    general_info_df = simple_check_df.iloc[:active_area_start_idx]\n",
-    "    active_area_df = simple_check_df.iloc[active_area_start_idx + 1:]  # skip the row with headers\n",
-    "    active_area_df.columns = simple_check_df.iloc[active_area_start_idx]  # Set new header for active area data\n",
+    "#     # Extract the general information data and the active area data separately, making a copy to avoid SettingWithCopyWarning\n",
+    "#     general_info_df = simple_check_df.iloc[:active_area_start_idx].copy()\n",
+    "#     active_area_df = simple_check_df.iloc[active_area_start_idx + 1:].copy()  # skip the row with headers and make a copy\n",
+    "#     active_area_df.columns = simple_check_df.iloc[active_area_start_idx]  # Set new header for active area data\n",
     "\n",
-    "    # Construct correct keys for the mapping using .loc to avoid SettingWithCopyWarning\n",
-    "    general_info_df.loc[:, 'Mapping_Key'] = general_info_df.apply(lambda x: f'P{x[\"Plate #\"]}W{x[\"Well #\"]}', axis=1)\n",
-    "    well_plate_genotype_mapping = general_info_df.set_index('Mapping_Key')[['Plate ID', 'Genotype']]\n",
+    "#     # Construct correct keys for the mapping\n",
+    "#     general_info_df['Mapping_Key'] = general_info_df.apply(lambda x: f'P{x[\"Plate #\"]}W{x[\"Well #\"]}', axis=1)\n",
+    "#     well_plate_genotype_mapping = general_info_df.set_index('Mapping_Key')[['Plate ID', 'Genotype']]\n",
     "\n",
-    "    # Create the new DataFrame structured as per the requirements\n",
-    "    new_csv_data = []\n",
-    "    for column in active_area_df.columns[2:]:  # skip 'Date' and 'DIV' columns\n",
-    "        for index, row in active_area_df.iterrows():\n",
-    "            if column in well_plate_genotype_mapping.index:\n",
-    "                plate_id = well_plate_genotype_mapping.loc[column, 'Plate ID']\n",
-    "                genotype = well_plate_genotype_mapping.loc[column, 'Genotype']\n",
-    "                well_number = column[-1]  # Extract the last character, which is the well number\n",
-    "                # Standardize NeuronType for any genotype containing \"WT\"\n",
-    "                neuron_type = \"WT\" if \"WT\" in genotype else genotype\n",
-    "                new_csv_data.append({\n",
-    "                    'DIV': row['DIV'],\n",
-    "                    'Chip_ID': plate_id,\n",
-    "                    'Well': well_number,\n",
-    "                    'NeuronType': neuron_type,\n",
-    "                    'Active_area': row[column]\n",
-    "                })\n",
+    "#     # Create the new DataFrame structured as per the requirements\n",
+    "#     new_csv_data = []\n",
+    "#     for column in active_area_df.columns[2:]:  # skip 'Date' and 'DIV' columns\n",
+    "#         for index, row in active_area_df.iterrows():\n",
+    "#             if column in well_plate_genotype_mapping.index:\n",
+    "#                 plate_id = well_plate_genotype_mapping.loc[column, 'Plate ID']\n",
+    "#                 genotype = well_plate_genotype_mapping.loc[column, 'Genotype']\n",
+    "#                 # Use regex to extract the well number (handles one or two digits)\n",
+    "#                 well_number = re.search('W(\\d+)', column).group(1)\n",
+    "#                 # Standardize NeuronType for any genotype containing \"WT\"\n",
+    "#                 neuron_type = \"WT\" if \"WT\" in genotype else genotype\n",
+    "#                 new_csv_data.append({\n",
+    "#                     'DIV': row['DIV'],\n",
+    "#                     'Chip_ID': plate_id,\n",
+    "#                     'Well': well_number,\n",
+    "#                     'NeuronType': neuron_type,\n",
+    "#                     'Active_area': row[column]\n",
+    "#                 })\n",
     "\n",
-    "    # Convert list of dictionaries into a DataFrame\n",
-    "    new_csv_df = pd.DataFrame(new_csv_data)\n",
+    "#     # Convert list of dictionaries into a DataFrame\n",
+    "#     new_csv_df = pd.DataFrame(new_csv_data)\n",
     "\n",
-    "    # Define the full path for saving the file\n",
-    "    full_path = os.path.join(base_path, sheet_name, 'Activity', 'Compiled_ActivityScan.csv')\n",
-    "    os.makedirs(os.path.dirname(full_path), exist_ok=True)  # Create the directory if it doesn't exist\n",
+    "#     # Define the full path for saving the file\n",
+    "#     full_path = os.path.join(base_path, sheet_name, 'Activity', 'Compiled_ActivityScan.csv')\n",
+    "#     os.makedirs(os.path.dirname(full_path), exist_ok=True)  # Create the directory if it doesn't exist\n",
     "\n",
-    "    # Save the DataFrame to a new CSV file\n",
-    "    new_csv_df.to_csv(full_path, index=False)\n",
+    "#     # Save the DataFrame to a new CSV file\n",
+    "#     new_csv_df.to_csv(full_path, index=False)\n",
     "\n",
-    "print(\"Data processing complete. Files have been saved in their respective directories.\")"
+    "# print(\"Data processing complete. Files have been saved in their respective directories.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -498,6 +423,7 @@
     }
    ],
    "source": [
+    "# final version\n",
     "import pandas as pd\n",
     "import os\n",
     "\n",
@@ -505,7 +431,7 @@
     "base_path = '/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/QualityCheck'\n",
     "\n",
     "# Load the Excel file\n",
-    "excel_path = '/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/QualityCheck/simple_check_1.xlsx'\n",
+    "excel_path = '/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/QualityCheck/simple_check.xlsx'\n",
     "sheets = pd.read_excel(excel_path, sheet_name=None)  # Load all sheets into a dictionary\n",
     "\n",
     "# Process each sheet\n",
